test/bad/rms0.pacc
/*
noccwarn 'parse.pacc: In function ‘pacc_parse’:
parse.pacc:13:13: error: passing argument 1 of ‘_pacc_ref_dup’ from incompatible pointer type [-Werror]
parse.c:148:14: note: expected ‘ref_t’ but argument is of type ‘char *’
cc1: all warnings being treated as errors'
*/

/* This is a slightly modified version of real user code. Obviously it's
 * wrong to pass a char * to ref_dup(), but because it's a macro, nobody
 * notices this. */

block
   <- n:word { printf("[%s]", ref_dup(n)) }

word::char *
   <- "fish" { ref_str() }

